@@ -1,3 +1,8 @@
+2006-08-10  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/bits/stl_bvector.h (_Bit_iterator_base::_M_incr(ptrdiff_t)):
+	Tidy a bit, thus reducing generated code size.
+
 2006-08-09  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/bits/stl_bvector.h (vector<bool>::_M_copy_aligned): New.
